[gd_scene load_steps=18 format=3 uid="uid://d3wia2qltyfck"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_nhsu7"]
[ext_resource type="Texture2D" uid="uid://b36h8nc5tkl4a" path="res://Atlas.png" id="2_4ukn0"]
[ext_resource type="Script" path="res://Inventory/InventoryCreature.gd" id="2_vjt7i"]
[ext_resource type="Script" path="res://SuckArea.gd" id="3_idxwb"]
[ext_resource type="Script" path="res://Player/Unsucker.gd" id="5_ynbm1"]
[ext_resource type="AudioStream" uid="uid://6hvayutj41lp" path="res://audio/grass.ogg" id="6_8nrwe"]
[ext_resource type="AudioStream" uid="uid://h7xydvtnnbg0" path="res://audio/suck.ogg" id="7_2uwgj"]
[ext_resource type="AudioStream" uid="uid://bv862f8q7fr54" path="res://audio/pop.ogg" id="8_ic2gg"]
[ext_resource type="AudioStream" uid="uid://b3hrnu0d3ik4m" path="res://audio/plop.ogg" id="9_wdcx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt78k"]
size = Vector2(8, 12)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h7ko0"]
radius = 5.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4if70"]
radius = 2.0

[sub_resource type="Animation" id="Animation_fjubm"]
resource_name = "Idle"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 0]
}

[sub_resource type="Animation" id="Animation_no3jy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n6o4f"]
resource_name = "Suck"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 2, 0, 2]
}

[sub_resource type="Animation" id="Animation_k5i4x"]
resource_name = "Walk"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j85o6"]
_data = {
"Idle": SubResource("Animation_fjubm"),
"RESET": SubResource("Animation_no3jy"),
"Suck": SubResource("Animation_n6o4f"),
"Walk": SubResource("Animation_k5i4x")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-1, -1)
motion_mode = 1
script = ExtResource("1_nhsu7")
speed = 50.0

[node name="InventoryCreature" type="Node2D" parent="."]
script = ExtResource("2_vjt7i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(-2, 2)
shape = SubResource("RectangleShape2D_yt78k")

[node name="Visual" type="Sprite2D" parent="."]
z_index = 20
texture = ExtResource("2_4ukn0")
hframes = 8
vframes = 8

[node name="SuckArea" type="Area2D" parent="Visual" node_paths=PackedStringArray("target_pull_point")]
position = Vector2(1, 3)
collision_mask = 254
monitorable = false
script = ExtResource("3_idxwb")
pull_strength = 1500.0
target_pull_point = NodePath("SuckTarget")

[node name="SuckCol" type="CollisionShape2D" parent="Visual/SuckArea"]
position = Vector2(12, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h7ko0")

[node name="SuckTarget" type="Node2D" parent="Visual/SuckArea"]
position = Vector2(3, 0)

[node name="Area2D" type="Area2D" parent="Visual/SuckArea/SuckTarget"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual/SuckArea/SuckTarget/Area2D"]
shape = SubResource("CircleShape2D_4if70")
debug_color = Color(0.89111, 0.000246814, 0.791182, 0.42)

[node name="Unsucker" type="Node2D" parent="Visual" node_paths=PackedStringArray("unsuck_src_node", "unsuck_dst_node")]
position = Vector2(3, 3)
script = ExtResource("5_ynbm1")
unsuck_src_node = NodePath("UnsuckSrc")
unsuck_dst_node = NodePath("UnsuckTarget")

[node name="UnsuckSrc" type="Node2D" parent="Visual/Unsucker"]

[node name="UnsuckTarget" type="Node2D" parent="Visual/Unsucker"]
position = Vector2(18, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j85o6")
}

[node name="AudioGrass" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8nrwe")
volume_db = -7.0

[node name="AudioSuck" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2uwgj")
volume_db = -4.0

[node name="AudioPop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ic2gg")

[node name="AudioPlop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_wdcx5")

[connection signal="body_entered" from="Visual/SuckArea" to="Visual/SuckArea" method="_on_body_entered"]
[connection signal="body_exited" from="Visual/SuckArea" to="Visual/SuckArea" method="_on_body_exited"]
